Corrected bootstrap row to *actually* allow overriding help text.

--- a/zenaida/templates/floppyforms/rows/bootstrap.html
+++ b/zenaida/templates/floppyforms/rows/bootstrap.html
@@ -45,8 +45,8 @@
 				{% endif %}
 			{% endblock %}
 			{% block help_text %}
-				{% if field.help_text %}
-					<p class="help-block">{{ field.help_text }}</p>
+				{% if help_text %}
+					<p class="help-block">{{ help_text }}</p>
 				{% endif %}
 			{% endblock %}
 			{% block hidden_fields %}
